# ChanceCode

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.sh  printf_sample.s  return_123.s  runtime.s
backends/: backend_arm64.c  backend_bslash.c  backend_x86.c  builtins.c
ccb/: runtime.ccb
docs/: architecture.md  ccb-porting-plan.md
include/cc/: backend.h  bytecode.h  diagnostics.h  loader.h
samples/: printf_sample.ccb  return_123.ccb  return_123.ccbin
src/: CEnhanced.code-workspace  backend.c  bytecode.c  cli.c  diagnostics.c  loader.c
tests/: CMakeLists.txt  ccbin_metadata.ccb  complex_ops.ccb  literal_sample.ccb  simple_add.ccb  tmp.ccb
tests/expected/: ccbin_metadata.ccbin  complex_ops.asm
vscode-ext/chance-code-highlighter/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.client.json  tsconfig.server.json
vscode-ext/chance-code-highlighter/server/src/: server.ts
vscode-ext/chance-code-highlighter/src/: extension.ts
vscode-ext/chance-code-highlighter/syntaxes/: chancecode.tmLanguage.json
